Added element managing and first elements
