# server/Dash.Persistence/Models/Element.cs
@@ -18,6 +18,11 @@ public class Element
 
     public DateTime? ExpireDate { get; set; }
 
+    public int X { get; set; }
+    public int Y { get; set; }
+    public int Cols {  get; set; }
+    public int Rows { get; set; }
+
     [Required]
     public Guid ComponentId { get; set; }
     public required Component Component { get; set; }
