# server/Dash.Server/Contracts/ElementRequest.cs
@@ -13,4 +13,9 @@ public class ElementRequest
     public Guid ComponentId { get; set; }
     [Required]
     public Guid DisplayId { get; set; }
+
+    public int X {  get; set; }
+    public int Y { get; set; }
+    public int Cols { get; set; }
+    public int Rows { get; set; }
 }
